Fix text overflow

--- a/main.css
+++ b/main.css
@@ -50,7 +50,7 @@ div#images div:hover span {
 
 div#images div {
   float: left;
-  width: 8%;
+  width: 10%;
   margin: 2%;
   border: 1px solid black;
   padding: 5px;
@@ -63,11 +63,16 @@ img {
   object-position: 0 0;
 }
 
-div#images div img.caticon {
+div#images div img.category-icon {
   width: 99%;
 }
 
-img.listicon {
+span.category-caption {
+  font-size: 75%;
+  font-weight: bold;
+}
+
+img.list-icon {
   width: 32px;
   height: 32px;
 }
